# langgraph

./: basic_langgraph.py  main.py  pyproject.toml  requirements.txt  supabase.py  test.ipynb
backend/: main.py
backend/agents/: base.py  classifier.py  logical.py  therapist.py
backend/cli/: chatbot.py
backend/config/: database.py
backend/database/: connection.py  setup.py
backend/graph/: builder.py  router.py  state.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ThemeToggle.tsx  feature108-demo.tsx  glowing-effect-demo.tsx  testimonials-demo.tsx
frontend/components/ui/: acme-hero.tsx  animated-shader-background.tsx  glowing-effect.tsx  shadcnblocks-com-feature108.tsx  sheet.tsx  testimonials-columns-1.tsx
